--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   searchable_paginated_dropdown: ^1.3.0
   dropdown_search: ^6.0.2
   flutter_svg: ^2.2.3
+  mjpeg_view: ^1.0.1
 
 dev_dependencies:
   flutter_test:
