--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   dropdown_search: ^6.0.2
   flutter_svg: ^2.2.3
   mjpeg_view: ^1.0.1
+  flutter_webrtc: ^1.3.0
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
